--- a/sections/slideshow-with-text.liquid
+++ b/sections/slideshow-with-text.liquid
@@ -46,70 +46,46 @@
   {%- endif -%}
 {%- endunless -%}
 
-<div
-  class="{% if bg_color == settings.col_page_bg or section.settings.bg_style != 'section' or section.settings.color_scheme == 'none' %}spaced-section{% else %}padded-section{% endif %}"
-  id="{{ section.id }}"
-  data-section-type="slideshow-with-text"
-  data-cc-animate
->
+<div class="{% if bg_color == settings.col_page_bg or section.settings.bg_style != 'section' or section.settings.color_scheme == 'none' %}spaced-section{% else %}padded-section{% endif %}" id="{{ section.id }}" data-section-type="slideshow-with-text" data-cc-animate>
   <div class="container section-content section-content--no-padding">
     <div class="media-with-text{% if section.settings.layout == 'right' %} media-with-text--reverse{% endif %}{% unless section.settings.bg_style == 'section' %}{% if section.settings.color_scheme == 'scheme-1' or section.settings.color_scheme == 'scheme-2' %} color-{{ section.settings.color_scheme }}{% endif %}{% endunless %}">
       <div class="media-with-text__half">
         <div class="media-with-text__media">
-          <div
-            class="slideshow dots-over{% unless section.settings.slide_show_mobile_arrows %} slideshow--no-mobile-arrows{% endunless %}"
-            data-transition="{{ section.settings.slide_mode }}"
-            data-autoplay="{{ section.settings.autoplay }}"
-            data-autoplay-speed="{{ section.settings.autoplay_speed }}"
-          >
+          <div class="slideshow dots-over{% unless section.settings.slide_show_mobile_arrows %} slideshow--no-mobile-arrows{% endunless %}"
+               data-transition="{{ section.settings.slide_mode }}"
+               data-autoplay="{{ section.settings.autoplay }}"
+               data-autoplay-speed="{{ section.settings.autoplay_speed }}">
             {%- for block in section.blocks -%}
               <div class="slide" {{ block.shopify_attributes }}>
                 {%- if block.settings.image -%}
                   {%- assign img = block.settings.image -%}
-                  <div
-                    class="media-with-text__image lazyload-placeholder"
-                    style="padding-top: {{ 1 | divided_by: img.aspect_ratio | times: 100 }}%;"
-                  >
+                  <div class="media-with-text__image lazyload-placeholder" style="padding-top: {{ 1 | divided_by: img.aspect_ratio | times: 100 }}%;">
                     <picture>
-                      <source
-                        data-srcset="
-                          {%- if img.width < 640 %}{{ img | image_url }} {{ img.width }}w{% endif -%}
-                          {%- if img.width >= 640 %}{{ img | image_url: width: 640 }} 640w{% endif -%}
-                          {%- if img.width >= 750 %}, {{ img | image_url: width: 750 }} 750w{% endif -%}
-                          {%- if img.width >= 856 %}, {{ img | image_url: width: 856 }} 856w{% endif -%}
-                        "
-                        media="(max-width: 480px)"
-                        width="428"
-                        height="{{ 428 | divided_by: img.aspect_ratio | round }}"
-                      >
-                      <img
-                        data-srcset="
-                          {%- if img.width < 600 %}{{ img | image_url }} {{ img.width }}w{% endif -%}
-                          {%- if img.width >= 600 %}{{ img | image_url: width: 600 }} 600w{% endif -%}
-                          {%- if img.width >= 960 %}, {{ img | image_url: width: 960 }} 960w{% endif -%}
-                          {%- if img.width >= 1200 %}, {{ img | image_url: width: 1200 }} 1200w{% endif -%}
-                        "
-                        data-src="{{ img | image_url: width: 600 }}"
-                        data-sizes="(min-width: 1280px) 600px, (min-width: 992px) calc(50vw - 40px), (min-width: 768px) calc(50vw - 30px), calc(100vw - 40px)"
-                        class="img-fit lazyload-manual"
-                        width="{{ img.width }}"
-                        height="{{ img.height }}"
-                        alt="{{ img.alt | escape }}"
-                      >
+                      <source data-srcset="{%- if img.width < 640 %}{{ img | image_url }} {{ img.width }}w{% endif -%}
+                                           {%- if img.width >= 640 %}{{ img | image_url: width: 640 }} 640w{% endif -%}
+                                           {%- if img.width >= 750 %}, {{ img | image_url: width: 750 }} 750w{% endif -%}
+                                           {%- if img.width >= 856 %}, {{ img | image_url: width: 856 }} 856w{% endif -%}"
+                              media="(max-width: 480px)"
+                              width="428"
+                              height="{{ 428 | divided_by: img.aspect_ratio | round }}">
+                      <img data-srcset="{%- if img.width < 600 %}{{ img | image_url }} {{ img.width }}w{% endif -%}
+                                        {%- if img.width >= 600 %}{{ img | image_url: width: 600 }} 600w{% endif -%}
+                                        {%- if img.width >= 960 %}, {{ img | image_url: width: 960 }} 960w{% endif -%}
+                                        {%- if img.width >= 1200 %}, {{ img | image_url: width: 1200 }} 1200w{% endif -%}"
+                           data-src="{{ img | image_url: width: 600 }}"
+                           data-sizes="(min-width: 1280px) 600px, (min-width: 992px) calc(50vw - 40px), (min-width: 768px) calc(50vw - 30px), calc(100vw - 40px)"
+                           class="img-fit lazyload-manual"
+                           width="{{ img.width }}"
+                           height="{{ img.height }}"
+                           alt="{{ img.alt | escape }}">
                     </picture>
                     <noscript>
-                      <img
-                        src="{{ img | image_url: width: 600 }}"
-                        class="img-fit"
-                        width="{{ img.width }}"
-                        height="{{ img.height }}"
-                        alt="{{ img.alt | escape }}"
-                      >
+                      <img src="{{ img | image_url: width: 600 }}" class="img-fit" width="{{ img.width }}" height="{{ img.height }}" alt="{{ img.alt | escape }}">
                     </noscript>
                   </div>
                 {%- else -%}
                   <div class="placeholder-wrapper">
-                    {{ 'image' | placeholder_svg_tag: 'placeholder dark' }}
+                    {{ 'image' | placeholder_svg_tag: "placeholder dark" }}
                   </div>
                 {%- endif -%}
               </div>
@@ -132,14 +108,7 @@
           {%- endif -%}
           {%- if section.settings.button_text != blank -%}
             <div class="media-with-text__link" data-cc-animate="cc-fade-in-up" data-cc-animate-delay="0.3s">
-              <a
-                class="{{ section.settings.button_style }}"
-                {% if section.settings.button_link != blank %}
-                  href="{{ section.settings.button_link }}"
-                {% else %}
-                  role="link" aria-disabled="true"
-                {% endif %}
-              >
+              <a class="{{ section.settings.button_style }}" {% if section.settings.button_link != blank %}href="{{ section.settings.button_link }}"{% else %}role="link" aria-disabled="true"{% endif %}>
                 {{ section.settings.button_text | escape }}
               </a>
             </div>
@@ -151,230 +120,230 @@
 </div>
 
 {% schema %}
-{
-  "name": "Slideshow with text",
-  "max_blocks": 5,
-  "settings": [
-    {
-      "type": "select",
-      "id": "layout",
-      "label": "Slideshow position (desktop)",
-      "options": [
-        {
-          "value": "left",
-          "label": "Left"
-        },
-        {
-          "value": "right",
-          "label": "Right"
-        }
-      ],
-      "default": "left"
-    },
-    {
-      "type": "header",
-      "content": "Text"
-    },
-    {
-      "type": "text",
-      "id": "heading",
-      "label": "Heading",
-      "default": "Slideshow with text"
-    },
-    {
-      "type": "richtext",
-      "id": "text",
-      "label": "Text",
-      "default": "<p>Pair large text with images to give focus to your chosen product, collection or blog post. Add details on availability, style or even provide a review.</p>"
-    },
-    {
-      "type": "text",
-      "id": "button_text",
-      "label": "Button label",
-      "default": "Shop"
-    },
-    {
-      "type": "url",
-      "id": "button_link",
-      "label": "Button link"
-    },
-    {
-      "type": "select",
-      "id": "button_style",
-      "label": "Button style",
-      "options": [
-        {
-          "value": "feature-link",
-          "label": "Link"
-        },
-        {
-          "value": "button",
-          "label": "Primary button"
-        },
-        {
-          "value": "button button--alt",
-          "label": "Secondary button"
-        }
-      ],
-      "default": "feature-link"
-    },
-    {
-      "type": "select",
-      "id": "text_alignment",
-      "label": "Text alignment",
-      "options": [
-        {
-          "value": "left",
-          "label": "Left"
-        },
-        {
-          "value": "center",
-          "label": "Center"
-        },
-        {
-          "value": "right",
-          "label": "Right"
-        }
-      ],
-      "default": "center"
-    },
-    {
-      "type": "checkbox",
-      "id": "text_center_mobile",
-      "label": "Center align text on mobile",
-      "default": false
-    },
-    {
-      "type": "header",
-      "content": "Style"
-    },
-    {
-      "type": "select",
-      "id": "bg_style",
-      "label": "Background style",
-      "options": [
-        {
-          "value": "content",
-          "label": "Content"
-        },
-        {
-          "value": "section",
-          "label": "Section"
-        }
-      ],
-      "default": "section"
-    },
-    {
-      "type": "select",
-      "id": "color_scheme",
-      "label": "Color scheme",
-      "options": [
-        {
-          "value": "none",
-          "label": "Default"
-        },
-        {
-          "value": "scheme-1",
-          "label": "Scheme 1"
-        },
-        {
-          "value": "scheme-2",
-          "label": "Scheme 2"
-        },
-        {
-          "value": "custom",
-          "label": "Custom (set below)"
-        }
-      ],
-      "default": "scheme-1"
-    },
-    {
-      "type": "color",
-      "id": "color_bg",
-      "label": "Custom background color"
-    },
-    {
-      "type": "color",
-      "id": "color_heading",
-      "label": "Custom heading color"
-    },
-    {
-      "type": "color",
-      "id": "color_text",
-      "label": "Custom text color"
-    },
-    {
-      "type": "paragraph",
-      "content": "Color scheme heading / text colors only apply to the \"Content\" background style"
-    },
-    {
-      "type": "header",
-      "content": "Control"
-    },
-    {
-      "type": "select",
-      "id": "slide_mode",
-      "label": "Transition",
-      "options": [
-        {
-          "value": "slide",
-          "label": "Slide"
-        },
-        {
-          "value": "fade",
-          "label": "Fade"
-        }
-      ],
-      "default": "slide"
-    },
-    {
-      "id": "autoplay",
-      "type": "checkbox",
-      "label": "Auto-rotate slides",
-      "default": true
-    },
-    {
-      "type": "range",
-      "id": "autoplay_speed",
-      "min": 2,
-      "max": 10,
-      "step": 1,
-      "unit": "s",
-      "label": "Change slides every",
-      "default": 5
-    },
-    {
-      "type": "checkbox",
-      "id": "slide_show_mobile_arrows",
-      "label": "Show arrows on small screens",
-      "default": true
-    }
-  ],
-  "blocks": [
-    {
-      "type": "image",
-      "name": "Slide",
-      "settings": [
-        {
-          "type": "image_picker",
-          "id": "image",
-          "label": "Image"
-        }
-      ]
-    }
-  ],
-  "presets": [
-    {
-      "name": "Slideshow with text",
-      "blocks": [
-        {
-          "type": "image"
-        },
-        {
-          "type": "image"
-        }
-      ]
-    }
-  ]
-}
+  {
+    "name": "Slideshow with text",
+    "max_blocks": 5,
+    "settings": [
+      {
+        "type": "select",
+        "id": "layout",
+        "label": "Slideshow position (desktop)",
+        "options": [
+          {
+            "value": "left",
+            "label": "Left"
+          },
+          {
+            "value": "right",
+            "label": "Right"
+          }
+        ],
+        "default": "left"
+      },
+      {
+        "type": "header",
+        "content": "Text"
+      },
+      {
+        "type": "text",
+        "id": "heading",
+        "label": "Heading",
+        "default": "Slideshow with text"
+      },
+      {
+        "type": "richtext",
+        "id": "text",
+        "label": "Text",
+        "default": "<p>Pair large text with images to give focus to your chosen product, collection or blog post. Add details on availability, style or even provide a review.</p>"
+      },
+      {
+        "type": "text",
+        "id": "button_text",
+        "label": "Button label",
+        "default": "Shop"
+      },
+      {
+        "type": "url",
+        "id": "button_link",
+        "label": "Button link"
+      },
+      {
+        "type": "select",
+        "id": "button_style",
+        "label": "Button style",
+        "options": [
+          {
+            "value": "feature-link",
+            "label": "Link"
+          },
+          {
+            "value": "button",
+            "label": "Primary button"
+          },
+          {
+            "value": "button button--alt",
+            "label": "Secondary button"
+          }
+        ],
+        "default": "feature-link"
+      },
+      {
+        "type": "select",
+        "id": "text_alignment",
+        "label": "Text alignment",
+        "options": [
+          {
+            "value": "left",
+            "label": "Left"
+          },
+          {
+            "value": "center",
+            "label": "Center"
+          },
+          {
+            "value": "right",
+            "label": "Right"
+          }
+        ],
+        "default": "center"
+      },
+      {
+        "type": "checkbox",
+        "id": "text_center_mobile",
+        "label": "Center align text on mobile",
+        "default": false
+      },
+      {
+        "type": "header",
+        "content": "Style"
+      },
+      {
+        "type": "select",
+        "id": "bg_style",
+        "label": "Background style",
+        "options": [
+          {
+            "value": "content",
+            "label": "Content"
+          },
+          {
+            "value": "section",
+            "label": "Section"
+          }
+        ],
+        "default": "section"
+      },
+      {
+        "type": "select",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "options": [
+          {
+            "value": "none",
+            "label": "Default"
+          },
+          {
+            "value": "scheme-1",
+            "label": "Scheme 1"
+          },
+          {
+            "value": "scheme-2",
+            "label": "Scheme 2"
+          },
+          {
+            "value": "custom",
+            "label": "Custom (set below)"
+          }
+        ],
+        "default": "scheme-1"
+      },
+      {
+        "type": "color",
+        "id": "color_bg",
+        "label": "Custom background color"
+      },
+      {
+        "type": "color",
+        "id": "color_heading",
+        "label": "Custom heading color"
+      },
+      {
+        "type": "color",
+        "id": "color_text",
+        "label": "Custom text color"
+      },
+      {
+        "type": "paragraph",
+        "content": "Color scheme heading / text colors only apply to the \"Content\" background style"
+      },
+      {
+        "type": "header",
+        "content": "Control"
+      },
+      {
+        "type": "select",
+        "id": "slide_mode",
+        "label": "Transition",
+        "options": [
+          {
+            "value": "slide",
+            "label": "Slide"
+          },
+          {
+            "value": "fade",
+            "label": "Fade"
+          }
+        ],
+        "default": "slide"
+      },
+      {
+        "id": "autoplay",
+        "type": "checkbox",
+        "label": "Auto-rotate slides",
+        "default": true
+      },
+      {
+        "type": "range",
+        "id": "autoplay_speed",
+        "min": 2,
+        "max": 10,
+        "step": 1,
+        "unit": "s",
+        "label": "Change slides every",
+        "default": 5
+      },
+      {
+        "type": "checkbox",
+        "id": "slide_show_mobile_arrows",
+        "label": "Show arrows on small screens",
+        "default": true
+      }
+    ],
+    "blocks": [
+      {
+        "type": "image",
+        "name": "Slide",
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Image"
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "Slideshow with text",
+        "blocks": [
+          {
+            "type": "image"
+          },
+           {
+            "type": "image"
+          }
+        ]
+      }
+    ]
+  }
 {% endschema %}
